--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 set(ESP_SERIAL_FLASHER_PORT "CUSTOM" CACHE STRING "Port")
 set_property(CACHE ESP_SERIAL_FLASHER_PORT PROPERTY STRINGS "ESP;STM32;RASPBERRY_PI;CUSTOM")
+option(ESP_SERIAL_FLASHER_ENABLE_MD5 "Enable MD5 based verification" OFF)
 
 set(srcs
     src/esp_loader.c
@@ -61,8 +62,8 @@ else()
 
 endif()
 
-if(DEFINED MD5_ENABLED OR CONFIG_SERIAL_FLASHER_MD5_ENABLED)
-    target_compile_definitions(${target} PUBLIC -DMD5_ENABLED=1)
+if(ESP_SERIAL_FLASHER_ENABLE_MD5 OR CONFIG_SERIAL_FLASHER_MD5_ENABLED)
+    target_compile_definitions(${target} PUBLIC MD5_ENABLED=1)
 endif()
 
 if(DEFINED CONFIG_SERIAL_FLASHER_RESET_HOLD_TIME_MS AND DEFINED CONFIG_SERIAL_FLASHER_BOOT_HOLD_TIME_MS)
